# hatch-bug-20231105

./: README.md  hatch_build.py  pyproject.toml
src/mypackage/: __init__.py
