[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypackage"
dynamic = ["version"]
description = "MVCE for a bug in Hatch when force-including an existing file in a wheel"
#readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "hatch-bug-20231105@varonathe.org" }
]

[tool.hatch.version]
path = "src/mypackage/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "hatch_build.py",
    "tox.ini",
]

[tool.hatch.build.hooks.custom]
